--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     implementation 'com.makeramen:roundedimageview:2.3.0'
     implementation 'com.google.firebase:firebase-storage'
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.github.sharish:ShimmerRecyclerView:v1.3'
 
 
     implementation 'com.squareup.picasso:picasso:2.5.2'
